<resources>
    <string name="app_name">To Do</string>
    <string name="action_settings">Settings</string>
    <string name="listName">List1</string>
    <string name="copy">Copy</string>
    <string name="update">update</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="createIdHeader">Create a \nfree Account</string>
    <string name="Gmail">Google</string>
    <string name="gmail">Google</string>
    <string name="facebook">facebook</string>
    <string name="mail">Mail</string>
    <string name="signInInfo">This way you\'ll keep your tasks and lists in across all your devices.</string>
    <string name="alreadySign">I\'M ALREADY A MEMBER</string>
    <string name="welcomUser">welocme to this app</string>
    <string name="welcomeUSer2">Here you can start \nyour first event</string>
    <string name="password">Password</string>
    <string name="name">User Name</string>
    <string name="email">Email</string>
    <string name="error_invalid_name">Invalis user name</string>
    <string name="error_invalid_email">Enter your email</string>
    <string name="error_invalid_password">Password should be more than 7 characters</string>
    <string name="error_login">Error login</string>
</resources>
