<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wtastudios.todo.SignIn">
    <TextView
        android:id="@+id/createIDHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_alignParentTop="true"
        android:text="@string/createIdHeader"
       />
    <TextView
        android:id="@+id/signInInfo"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/createIDHeader"
        android:text="@string/signInInfo"
        />

    <Button
        android:id="@+id/fbSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        android:onClick="facebookSignIn"
        android:textColor="#fff"
        android:background="#3F51B5"
        android:layout_below="@+id/googleSignIn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        />

    <Button
        android:id="@+id/googleSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gmail"
        android:onClick="googleSignIn"
        android:textColor="#fff"
        android:background="#E65100"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/signInInfo"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:onClick="mailSignIn"
        android:textColor="#fff"
        android:layout_marginTop="5dp"
        android:background="#2196F3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/fbSignIn"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/alreadySign"
        android:onClick="directSignIn"/>

</RelativeLayout>
